feat: Добавить запрос PATCH /spawns/{spawn}
